trabajamos la estructura inicial en nuestra pagia web

--- a/Comprar.html
+++ b/Comprar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> RESTAURANT EL INGENIERO </title>
+    <title> COMPRAR </title>
 </head>
 <body>
     <h1> Welcome </h1>
@@ -23,18 +23,18 @@
             <li>
                 <a href="./Contacto.html"> CONTACTO </a>
             </li>
-            <a href="https://www.google.com/?hl=es">google</a>
         </ul>
     </nav>
-    <div>
-        <img src="./imagenes/tacos ricos.jpg" alt="logo del nuetro plato principal">
-    </div>
 </header>
-<main>
-
-</main>
-<footer>
-    <p>TOMA UN MOMENTO PARA DEGUSTAR UNOS RICOS TACOS CON TU MEJOR COMPAÑIA  ;)</p>
-</footer>
+     <main>
+        <section>
+            <h1> como comprar </h1>
+            <ol>
+                <li>seleccionar los productos </li>
+                <li>mandarlos a carrito </li>
+                <li> comprar </li>
+            </ol>
+        </section>
+     </main>
 </body>
 </html> 
