creamos elementos con propiedades css

--- a/index.html
+++ b/index.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> RESTAURANT EL INGENIERO </title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="./imagenes/tacos ricos.jpg" type="image/">
 </head>
-<body>
-    <h1> Welcome </h1>
-<header>
-    <nav>
-        <ul>
-            <li> 
-                <a href="./index.html"> INICIO </a>
-            </li>
-            <li>
-                <a href="./Quienes-somos.html"> QUIENES SOMOS </a>
-            </li>
-            <LI>
-                <a href="./Comprar.html">COMPRAR</a>
-            </LI>
-            <li>
-                <a href="./Contacto.html"> CONTACTO </a>
-            </li>
-            <a href="https://www.google.com/?hl=es">google</a>
-        </ul>
-    </nav>
-    <div>
-        <img src="./imagenes/tacos ricos.jpg" alt="logo del nuetro plato principal">
-    </div>
-</header>
-<main>
 
-</main>
-<footer>
-    <p>TOMA UN MOMENTO PARA DEGUSTAR UNOS RICOS TACOS CON TU MEJOR COMPAÑIA  ;)</p>
-</footer>
+<body>
+    <h1 class="ingenieros">BIENBENIDOS</h1>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="./index.html"> INICIO </a>
+                </li>
+                <li>
+                    <a href="./Quienes-somos.html"> QUIENES SOMOS </a>
+                </li>
+                <LI>
+                    <a href="./Comprar.html">COMPRAR</a>
+                </LI>
+                <li>
+                    <a href="./Contacto.html"> CONTACTO </a>
+                </li>
+                <a href="https://www.google.com/?hl=es">google</a>
+            </ul>
+        </nav>
+        <div>
+            <img class="ricos-tacos" src="./imagenes/tacos ricos.jpg" alt="logo del nuetro plato principal">
+            <img class="ricos-chiles-en-nogada" src="./imagenes/chiles en nogada.jfif" alt="ricos chiles en nogada">
+        </div>
+    </header>
+    <main>
+        <h1 id="slogan">Bienvenido a el RESTAURANT el ingeniero :)</h1>
+    </main>
+    <footer class="tamaño-de-icono ">
+        <p>TOMA UN MOMENTO PARA DEGUSTAR UNOS RICOS TACOS CON TU MEJOR COMPAÑIA ;)</p>
+        <a href="https://es-la.facebook.com/" target="_blank">
+            <iconify-icon icon="ri:facebook-circle-fill">
+            </iconify-icon></a>
+
+    </footer>
+    <script src="https://code.iconify.design/iconify-icon/1.0.3/iconify-icon.min.js"></script>
 </body>
-</html> 
+
+</html>
