--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> QUIENES SOMOS </title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1> Welcome </h1>
+    <h1> Welcome</h1>
 <header>
     <nav>
         <ul>
@@ -27,25 +28,14 @@
     </nav>
 </header>
 <main>
-    <h1>quienes somos </h1>
+    <h1> SOMOS UN LOCAL DE COMIDA TIPICA DE PUEBLA </h1>
        <section>
            <div>
              <img src="./imagenes/cema.jfif" alt="cema poblana">
-             <h2>en local 12 sur</h2>
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Fugiat sequi nobis, non hic accusamus unde fuga porro qui 
-                quidem minus delectus repellendus? Magnam excepturi
-                 dolorem laudantium aliquid quo. Tempore, reprehenderit.</p>
+             <h2>12 sur CAMINO A EL CBTis 254</h2>
+             <p> Estamos ubicadon en la calle 12 norte en la carretera hacia el bachillerato emiliano zapata ofreciendo una variedad de comida estudiantil a precios accesibles con su identificacion de estudiante donde degusten sus platillos favoritos  .</p>
                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3776.2674813250733!2d-97.54504918586886!3d18.83077096452994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c571e8be514405%3A0x6e4a587ebd0ce50c!2sC.%2012%20Sur%2C%20Palmar%20de%20Bravo%2C%20Pue.!5e0!3m2!1ses!2smx!4v1674872015564!5m2!1ses!2smx" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-              <div>
-                <img src="./imagenes/mixiote.jfif" alt="mixiote platillo tipico poblano">
-                <h2>en local 10 sur</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Ducimus, vel corrupti cumque ullam, molestiae vero quod
-                     cupiditate, aut laudantium tempore velit voluptatum aliquam 
-                     repellat corporis nobis neque quam eos dolores.</p>
-                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3776.245797690142!2d-97.54546768586881!3d18.831735664500215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c571e8f7c5f61d%3A0xa1d896a3474ae59c!2sC.%2010%20Sur%2C%2075500%20Palmar%20de%20Bravo%2C%20Pue.!5e0!3m2!1ses!2smx!4v1674873103092!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
 
               </div>
        </section>
